这是链家首页

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		</style>
 		<link rel="stylesheet" href="css/base.css" />
 		<link rel="stylesheet" href="css/lianjia.css" />
-		<script type="text/javascript" src="../jq1.7.2/jquery.js" ></script>
-		<script type="text/javascript" src="../js/angular-1.5.6.js" ></script>
-		<script type="text/javascript" src="../js/lianjia.js" ></script>
+		<script type="text/javascript" src="js/jquery.js" ></script>
+		<script type="text/javascript" src="js/angular-1.5.6.js" ></script>
+		<script type="text/javascript" src="js/lianjia.js" ></script>
 		<script>
 			var app=angular.module('mk',[]);
 			app.controller('show',function($scope){
